updated new resume after cleaning out old stuff using bfg

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-ne Page Two Column Resume
+eedy - One Page Two Column Resume
 % LaTeX Template
 % Version 1.1 (30/4/2014)
 %
@@ -53,7 +53,7 @@ ne Page Two Column Resume
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated{Updated December 2016}
+\lastupdated
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -112,7 +112,7 @@ Operating Systems (cse421) \\
 Software Engineering (cse442) \\
 Machine Learning (cse474) \\
 Modern Networking Concepts (cse489) \\
-Hardware/Software Integrated Systems Design (cse453) \\
+Integrated Systems Design (cse453) \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -149,25 +149,25 @@ Unix \textbullet{} Mac OS \textbullet{} Windows \textbullet{} Wireshark \\
 \section{Extracurricular Projects}
 
 \runsubsection{Hologen}
-\descript{| UB Hacking 2015 | UB CSedweek 2015}
-\location{Nov 2015 | Buffalo, NY}
+\descript{C\# | Unity Game Engine}
+\location{UB Hacking 2015 | UB CSedweek 2015 | Nov 2015 | Buffalo, NY}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}\item Constructed a plexiglass pyramid that uses the peppers ghost effect to capture a pseudohologram from the light of a LED TV \item Developed a custom camera array in the unity game engine to ease development for the pyramid \item developed 3d versions of Tetris, and Pong using C# and the camera array in unity \item selected by UB CSE department to present to high schoolers and the community at UB CSedweek 2015
+\begin{tightemize}\item Constructed a plexiglass pyramid that uses the peppers ghost effect to capture a pseudohologram from the light of an LED TV \item Developed a custom camera array in the unity game engine to ease development for the pyramid \item Programmed 3d versions of Tetris, and Pong using C\# and the unity game engine \item Selected by UB CSE department to present to high schoolers and the community at UB CSedweek 2015
 \end{tightemize}
 \sectionsep
 
 \runsubsection{Spinbot}
-\descript{| UB Hacking 2016 | UB CSedweek 2016}
-\location{Nov 2016 - Dec 2016 | Buffalo, NY}
+\descript{C | Arduino | Soldering/Electronics}
+\location{UB Hacking 2016 | UB CSedweek 2016 | Nov 2016 - Dec 2016 | Buffalo, NY}
 \begin{tightemize}
-\item Built a spinning wooden arm out of scrap wood, a cannibalized battle robot, and recycled optical drives\item Developed an LED persistence of vision display using arduino(s), bluetooth, and LEDs\item selected by UB CSE department to present to high schoolers and the community at UB CSedweek 2016 \end{tightemize}
+\item Crafted a spinning machine arm out of scrap wood, a cannibalized battle robot, and recycled optical drives\item Actualized an LED persistence of vision display using arduinos, bluetooth, and two LED arrays\item Selected by UB CSE department to present to high schoolers and the community at UB CSedweek 2016 \end{tightemize}
 \sectionsep
 
 \runsubsection{Alexander.directory}
-\descript{| Personal Website}
-\location{Jan 2013 – May 2013 | Buffalo, NY}
+\descript{HTML | CSS | MaterializeCSS/JS}
+\location{Personal Website | Oct 2016 – Present | Buffalo, NY}
 \begin{tightemize}
-\item Developed an attractive way to display my contact information using the Materialize CSS framework, HTML, and Javascript\end{tightemize}
+\item Designed an attractive way to display my contact information using the Materialize CSS/JS framework, and HTML\end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -176,9 +176,11 @@ Unix \textbullet{} Mac OS \textbullet{} Windows \textbullet{} Wireshark \\
 
 \section{Curricular Projects}
 \runsubsection{Hackman}
-\descript{| Software Engineering CSE442}
-\location{Aug 2016 – December 2016}
-Worked with Emily Hann, Edwin Santos, Olivia Alphonce, Steve Siwinski, and William Martens to develop software that will ease the organization, communication, and management of hackathons and other group-based events.
+\descript{HTML | MaterializeCSS | AngularJS | REST APIs}
+\location{Software Engineering CSE442 | Aug 2016 – December 2016 | Buffalo, NY}
+\begin{tightemize}
+\item Collaborated with peers using a mean stack to develop software that will ease the organization, communication, and management of hackathons and other group-based events.
+\end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -187,9 +189,9 @@ Worked with Emily Hann, Edwin Santos, Olivia Alphonce, Steve Siwinski, and Willi
 
 \section{Awards} 
 \begin{tabular}{rll}
-2015     & Best Hardware Hack  & Liazon \& UBHacking\\
-2015     & 2\textsuperscript{nd} Place Overall  & UBHacking\\
-2016     & 4\textsuperscript{th} Place Overall  & UBHacking\\
+2015     & Best Hardware Hack  & Liazon \& UBHacking 2015\\
+2015     & 2\textsuperscript{nd} Place Overall  & UBHacking 2015\\
+2016     & 4\textsuperscript{th} Place Overall  & UBHacking 2016\\
 \end{tabular}
 \sectionsep
 
@@ -197,12 +199,11 @@ Worked with Emily Hann, Edwin Santos, Olivia Alphonce, Steve Siwinski, and Willi
 %     SOCIETIES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Organizations/Causes} 
+\section{Organizations} 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Associateion for Computing Machinery\item Wikimedia Foundation\item The Python Foundation \item Free Software Foundation \end{tightemize}
+\item Association for Computing Machinery\item Wikimedia Foundation\item The Python Foundation \item Free Software Foundation \end{tightemize}
 \sectionsep
 
 \end{minipage} 
 \end{document}
-
