updated tex and cls files also

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,5 @@
-eedy - One Page Two Column Resume
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Deedy - One Page Two Column Resume
 % LaTeX Template
 % Version 1.1 (30/4/2014)
 %
@@ -14,16 +15,16 @@ eedy - One Page Two Column Resume
 % default. If you get compilation errors saying a font is missing, find the line
 % on which the font is used and either change it to a font included with your
 % operating system or comment the line out to use the default font.
-% 
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 
+%
 % TODO:
 % 1. Integrate biber/bibtex for article citation under publications.
 % 2. Figure out a smoother way for the document to flow onto the next page.
 % 3. Add styling information for a "Projects/Hacks" section.
 % 4. Add location/address information
 % 5. Merge OpenFont and MacFonts as a single sty with options.
-% 
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % CHANGELOG:
@@ -72,13 +73,13 @@ eedy - One Page Two Column Resume
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.33\textwidth} 
+\begin{minipage}[t]{0.33\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education} 
+\section{Education}
 
 \subsection{University at Buffalo}
 
@@ -138,9 +139,9 @@ Unix \textbullet{} Mac OS \textbullet{} Windows \textbullet{} Wireshark \\
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\end{minipage} 
+\end{minipage}
 \hfill
-\begin{minipage}[t]{0.66\textwidth} 
+\begin{minipage}[t]{0.66\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXTRACURRICULARS
@@ -187,11 +188,11 @@ Unix \textbullet{} Mac OS \textbullet{} Windows \textbullet{} Wireshark \\
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Awards} 
+\section{Awards}
 \begin{tabular}{rll}
-2015     & Best Hardware Hack  & Liazon \& UBHacking 2015\\
-2015     & 2\textsuperscript{nd} Place Overall  & UBHacking 2015\\
-2016     & 4\textsuperscript{th} Place Overall  & UBHacking 2016\\
+2015	 & Best Hardware Hack  & Liazon \& UBHacking 2015\\
+2015	 & 2\textsuperscript{nd} Place Overall  & UBHacking 2015\\
+2016	 & 4\textsuperscript{th} Place Overall  & UBHacking 2016\\
 \end{tabular}
 \sectionsep
 
@@ -199,11 +200,11 @@ Unix \textbullet{} Mac OS \textbullet{} Windows \textbullet{} Wireshark \\
 %     SOCIETIES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Organizations} 
+\section{Organizations}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Association for Computing Machinery\item Wikimedia Foundation\item The Python Foundation \item Free Software Foundation \end{tightemize}
 \sectionsep
 
-\end{minipage} 
+\end{minipage}
 \end{document}
