--- a/resume.tex
+++ b/resume.tex
@@ -105,7 +105,7 @@ Best Hardware Hack\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links}
-Personal Site:// \href{https://alexander.directory}{\custombold{alexander.directory}} \\
+Personal Site:// \href{https://aanelli.github.io}{\custombold{aanelli.github.io}} \\
 Github:// \href{https://github.com/xanderrman}{\custombold{xanderrman}} \\
 LinkedIn://  \href{https://www.linkedin.com/in/alex-anelli}{\custombold{alex-anelli}} \\
 \sectionsep
